--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <button>ORDER NOW</button>
                 </div>
                 <div class="cont-hamburguesaMitad">
-                    <img src="assets/img/HamburguesaPrecio.png" alt="">
+                    <img src="assets/cards/burguer6.png" alt="">
                 </div>
                 <div class="cont-sassy">
                     <h3>Sassy Burguer</h3>
@@ -75,7 +75,7 @@
         <div class="cont-cards">
 
             <div class="card">
-                <img src="assets/cards/burguer2.png" alt="">
+                <img src="assets/cards/burguer1.png" alt="">
                 <h4>Burger Thief</h4>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
                 <div>
@@ -85,7 +85,7 @@
             </div>
             <div class="card">
                 <img src="assets/cards/burguer2.png" alt="">
-                <h4>Burger Thief</h4>
+                <h4>Burger Fast</h4>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
                 <div>
                     <img src="assets/img/cart.png" alt="">
@@ -93,8 +93,8 @@
                 </div>
             </div>
             <div class="card">
-                <img src="assets/cards/burguer2.png" alt="">
-                <h4>Burger Thief</h4>
+                <img src="assets/cards/burguer3.png" alt="">
+                <h4>Burger Big</h4>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
                 <div>
                     <img src="assets/img/cart.png" alt="">
@@ -102,8 +102,8 @@
                 </div>
             </div>
             <div class="card">
-                <img src="assets/cards/burguer2.png" alt="">
-                <h4>Burger Thief</h4>
+                <img src="assets/cards/burguer4.png" alt="">
+                <h4>Burger Bacon</h4>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
                 <div>
                     <img src="assets/img/cart.png" alt="">
@@ -111,8 +111,8 @@
                 </div>
             </div>
             <div class="card">
-                <img src="assets/cards/burguer2.png" alt="">
-                <h4>Burger Thief</h4>
+                <img src="assets/cards/burguer5.png" alt="">
+                <h4>Burger Fat</h4>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
                 <div>
                     <img src="assets/img/cart.png" alt="">
@@ -120,8 +120,8 @@
                 </div>
             </div>
             <div class="card">
-                <img src="assets/cards/burguer2.png" alt="">
-                <h4>Burger Thief</h4>
+                <img src="assets/cards/burguer6.png" alt="">
+                <h4>Burger Thor</h4>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
                 <div>
                     <img src="assets/img/cart.png" alt="">
