--- a/index.html
+++ b/index.html
@@ -136,7 +136,93 @@
         </div>
     </section>
 
+    <div class="cont-section-hamburguesas-especiales">
+    <section class="seccion-hamburguesas-especiales">
+        
+            <div class="chicha-burguer">
+                <div class="hamburguesa-especial">
+                    <h4>Chicha Burger</h4>
+                    <button>Order now</button>
+                </div>
+                <div class="cont-mitad-burguer">
+                <img src="assets/hamburguesas-mitad/Frame 2.png" alt="">
+                </div>
+            </div>
 
+            <div class="friend-burguer">
+                <div class="hamburguesa-especial">
+                    <h4>Friend Burger</h4>
+                    <button>Order now</button>
+                </div>
+                <div class="cont-mitad-burguer">
+                <img src="assets/hamburguesas-mitad/Frame 3.png" alt="">
+                </div>
+            </div>
+            <div class="grill-burguer">
+                <div class="hamburguesa-especial">
+                    <h4>The Grill Thrill</h4>
+                    <button>Order now</button>
+                </div>
+                <div class="cont-mitad-burguer">
+                <img src="assets/hamburguesas-mitad/Frame 4.png" alt="">
+                </div>
+            </div>
+        
+    </section>
+</div>
+
+<div class="titulo-social">
+    <h3>Follow us on <a href="#">Instagram</a></h3>
+    <p>For the latest news, updates and inspirational recipes, <br>
+        follow us on Instagram to flavour up your food!
+    </p>
+</div>
+
+<div class="contenedor-social">
+    <div class="cont-social-png"><img src="assets/img/Social.png" alt=""></div>
+    <div class="cont-img-social">
+        <div><img class="img-social1" src="assets/img/social1.jpg" alt=""></div>
+        <div><img class="img-social2" src="assets/img/social2.jpeg" alt=""></div>
+        <div><img class="img-social3" src="assets/img/social3.jpeg" alt=""></div>
+    </div>
+</div>
+
+
+<footer>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#700033" fill-opacity="1" d="M0,288L80,256C160,224,320,160,480,154.7C640,149,800,203,960,229.3C1120,256,1280,256,1360,256L1440,256L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>
+    <div class="cont-listas">
+        <div class="cont-img-footer"><img src="assets/img/logoHamburguesa.png" alt="">
+            <p>Roberto Casaux 9999</p>
+            <p>+351-329-1417</p>
+            <p>quinterosjeremias8@gmail.com</p>            
+        </div>
+        <div class="service">
+            <span>Service</span>
+            <ul>
+                <li><a href="">Illustration</a> </li>
+                <li><a href="">Mobile Design</a> </li>
+                <li><a href="">Motion Graphic</a> </li>
+                <li><a href="">Web Design</a> </li>
+                <li><a href="">Development</a> </li>
+                <li><a href="">SEO</a> </li>
+            </ul>
+        </div>
+        <div class="company">
+            <span>Company</span>
+            <ul>
+                <li><a href="">Features</a> </li>
+                <li><a href="">Our Team</a> </li>
+                <li><a href="">Portfolio</a> </li>
+                <li><a href="">Blog</a> </li>
+                <li><a href="">Contact Us</a> </li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="copyright">
+        <p>Copyright Capital Burguers</p>
+    </div>
+</footer>
 </body>
 
 </html>
