--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/mobile.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -62,6 +63,23 @@
 
     </section>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <section class="second-section">
         <div class="titulo-our">
             <p>Our special</p>
@@ -101,7 +119,7 @@
                     <button>Order now</button>
                 </div>
             </div>
-            <div class="card">
+            <div class="card card-desaparecida">
                 <img src="assets/cards/burguer4.png" alt="">
                 <h4>Burger Bacon</h4>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
@@ -110,7 +128,7 @@
                     <button>Order now</button>
                 </div>
             </div>
-            <div class="card">
+            <div class="card card-desaparecida">
                 <img src="assets/cards/burguer5.png" alt="">
                 <h4>Burger Fat</h4>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
@@ -119,7 +137,7 @@
                     <button>Order now</button>
                 </div>
             </div>
-            <div class="card">
+            <div class="card card-desaparecida">
                 <img src="assets/cards/burguer6.png" alt="">
                 <h4>Burger Thor</h4>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
@@ -135,6 +153,31 @@
         </div>
         </div>
     </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <div class="cont-section-hamburguesas-especiales">
     <section class="seccion-hamburguesas-especiales">
@@ -171,6 +214,37 @@
     </section>
 </div>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <div class="titulo-social">
     <h3>Follow us on <a href="#">Instagram</a></h3>
     <p>For the latest news, updates and inspirational recipes, <br>
@@ -181,11 +255,38 @@
 <div class="contenedor-social">
     <div class="cont-social-png"><img src="assets/img/Social.png" alt=""></div>
     <div class="cont-img-social">
-        <div><img class="img-social1" src="assets/img/social1.jpg" alt=""></div>
-        <div><img class="img-social2" src="assets/img/social2.jpeg" alt=""></div>
-        <div><img class="img-social3" src="assets/img/social3.jpeg" alt=""></div>
+        <div class="visible-mobile"><img class="img-social1" src="assets/img/social1.jpg" alt=""></div>
+        <div class="invisible-mobile"><img class="img-social2" src="assets/img/social2.jpeg" alt=""></div>
+        <div class="invisible-mobile"><img class="img-social3" src="assets/img/social3.jpeg" alt=""></div>
     </div>
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 <footer>
