--- a/index.html
+++ b/index.html
@@ -324,6 +324,8 @@
     <div class="copyright">
         <p>Copyright Capital Burguers</p>
     </div>
+
+    <script src="js/script.js"></script>
 </footer>
 </body>
 
