--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <div class="cont-ul-nav">
                         <ul>
                             <li> <a href="">Home</a> </li>
-                            <li> <a class="enrojo" href="">Order now</a> </li>
+                            <li> <a class="enrojo" href="pages/orderNow.html">Order now</a> </li>
                             <li> <a class="enrojo" href="">Menu</a> </li>
                             <li> <a class="enrojo" href="">Location</a> </li>
                         </ul>
