--- a/index.html
+++ b/index.html
@@ -346,6 +346,7 @@
     
     <script src="node_modules/sweetalert2/dist/sweetalert2.all.min.js"></script>
     <script src="js/carritoModal.js"></script>
+    <script src="js/fetch.js"></script>
     <script src="js/2doScript.js"></script>
 </footer>
 </body>
