--- a/pages/orderNow.html
+++ b/pages/orderNow.html
@@ -13,7 +13,12 @@
     <h2 id="suPedido"></h2>
     <p class="" id="pedido"></p>
     
+    <div id="contenedorHamburguesas">
+
+
+    </div>
 
     <script src="../js/script.js"></script>
+    <script src="../js/fetch.js"></script>
 </body>
 </html>
