--- a/index.html
+++ b/index.html
@@ -62,19 +62,7 @@
 
         </div>
         <h4 id="logOrNot"></h4>
-        <div class="cont-productosElegidos">
-            <div id="formOrNot" class="productosElegidos">
-                    <form id="formUsuario">
-                        <input id="nombre" type="name" placeholder="Inserte su nombre">
-                        <input id="gmail" type="gmail" placeholder="Inserte su Gmail">
-                        <input id="botonSubmit" type="submit">
-
-                    </form>
-            </div>
-            <div class="cont-botonComprar">
-
-            </div>
-        </div>
+      
 
 
     </section>
@@ -105,7 +93,7 @@
 
 
         <!-- CARDS -->
-        <div class="cont-section-hamburguesas-compra">
+        <!-- <div class="cont-section-hamburguesas-compra">
         <div class="cont-cards">
 
             <div class="card">
@@ -167,7 +155,7 @@
         <div class="Imgmenu">
             <img src="assets/img/Menú3.png" alt="">
         </div>
-        </div>
+        </div> -->
 
 
         
