--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <h2>Single Patty</h2>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae magnam cupiditate aliquam soluta
                         impedit fugiat?</p>
-                    <button> <a href="pages/carrito.html">ORDER NOW</a> </button>
+                    <button> <a href="pages/orderNow.html">ORDER NOW</a> </button>
                 </div>
                 <div class="cont-hamburguesaMitad">
                     <img src="assets/cards/burguer6.png" alt="">
