--- a/pages/orderNow.html
+++ b/pages/orderNow.html
@@ -78,8 +78,8 @@
       </template>
 
       <template id="template-card">
-        <div class="col-12 mb-2">
-          <div class="card">
+        <div class="col-12 ">
+          <div class="card col-12">
             <div class="card-body">
               <h5>Titulo</h5>
               <p>precio</p>
