--- a/pages/orderNow.html
+++ b/pages/orderNow.html
@@ -14,6 +14,23 @@
 
 </head>
 <body class="body-OrderNow">
+    <header>
+        <nav>
+        <div class="cont-logo"> <img src="../assets/img/logoHamburguesa.png" class="logonav" alt=""> </div>
+        <div class="cont-ul-nav">
+            <ul>
+                <li> <a href="../index.html">Home</a> </li>
+                <li> <a class="enrojo" href="">Order now</a> </li>
+                <li> <a class="enrojo" href="">Menu</a> </li>
+                <li> <a class="enrojo" href="">Location</a> </li>
+            </ul>
+        </div>
+        <div class="cont-numero">
+            <p>+351-329-1417</p>
+            <img id="carrito" src="assets/img/cart.png" alt="">
+        </div>
+        </nav>
+    </header>
     <div class="titulo-our">
         <p>Our Special</p>
         <h4>Dine in + Delivery</h4>
